[package]
name = "air001_pac"
version = "1.1.2"
edition = "2024"
description = "PAC for Air001 microcontroller"
readme = "README.md"
repository = "https://github.com/ithilelda/air001_pac"
license = "MIT"
keywords = ["embedded", "air001"]

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = { version = "0.7.5", optional = true }
critical-section = { version = "1.2.0", optional = true }
vcell = "0.1.3"

[features]
rt = ["cortex-m-rt/device"]