[package]
name = "air001xx-pac"
version = "1.1.2"
edition = "2024"
description = "Generated PAC for Air001 microcontroller"
readme = "README.md"
repository = "https://github.com/ithilelda/air001xx-pac"
license = "MIT"
keywords = ["embedded", "air001"]
categories = ["no-std", "embedded", "hardware-support"]

[dependencies]
cortex-m = "0.7.7"
vcell = "0.1.3"
cortex-m-rt = { version = "0.7.5", optional = true }
critical-section = { version = "1.2.0", optional = true }

[features]
default = ["rt"]
rt = ["cortex-m-rt/device"]